# grapesy

./: .gitignore  CHANGELOG.md  LICENSE  NEXT  README.md  STMBUG.md  TODO  cabal.haskell-ci  cabal.project  cabal.project.ci  cabal.project.ghc910  cabal.project.plugin  copy-grapesy-common.sh  flake.nix  gencert.sh  genproto.sh  grapesy.cabal  tmp.txt  weeder.dhall
garp/: .stylish-haskell.yaml  LICENSE  garp.cabal
garp/echo/: Main.hs
garp/src/Network/: Garp.hs
grapesy/: CHANGELOG.md  README.md  cabal.project.ci  cabal.project.plugin  grapesy.cabal
grapesy-common/: grapesy-common.cabal
grapesy-common/src/Network/GRPC/: Common.hs
grapesy-common/src/Network/GRPC/Client/: Binary.hs  Call.hs  Connection.hs  Meta.hs  Session.hs  StreamType.hs
grapesy-common/src/Network/GRPC/Common/: Compression.hs  Exception.hs  HTTP2Settings.hs  Headers.hs  JSON.hs  NextElem.hs  Protobuf.hs  ProtocolException.hs
grapesy-common/src/Network/GRPC/Server/: Call.hs  Context.hs  Handler.hs  HandlerMap.hs  Session.hs  StreamType.hs
grapesy-common/src/Network/GRPC/Util/: ClientStream.hs  GHC.hs  HeaderTable.hs  Imports.hs  RedundantConstraint.hs  ServerStream.hs  Stream.hs  Thread.hs  TimeManager.hs
grapesy-tcp/: CHANGELOG.md  grapesy-tcp.cabal
grapesy-tcp/kvstore/KVStore/: Server.hs
grapesy-tcp/proto/Proto/: Empty.hs  Empty_Fields.hs  Helloworld.hs  Helloworld_Fields.hs  Kvstore.hs  Kvstore_Fields.hs  Messages.hs  Messages_Fields.hs  Ping.hs  Ping_Fields.hs  RouteGuide.hs  RouteGuide_Fields.hs  Spec.hs  Spec_Fields.hs  Test.hs  TestAny.hs  TestAny_Fields.hs  Test_Fields.hs
grapesy-tcp/proto/Proto/API/: Helloworld.hs  Ping.hs
grapesy-tcp/quickstart/: grapesy-tcp-quickstart-tutorial.cabal
grapesy-tcp/src/: TCP.hs
grapesy-tcp/src/Network/GRPC/: Common.hs  Server.hs  TCP.hs
grapesy-tcp/src/Network/GRPC/Client/: Run.hs
grapesy-tcp/src/Network/GRPC/Common/: Protobuf.hs  StreamElem.hs
grapesy-tcp/src/Network/GRPC/Server/: Handler.hs  Protobuf.hs  Run.hs  StreamType.hs
grapesy-tcp/src/Network/GRPC/Util/: BufferedSocket.hs  HTTP2.hs  Imports.hs  Stream.hs
grapesy-tcp/test-grapesy/Test/Driver/: ClientServer.hs
grapesy-tcp/test-grapesy/Test/Regression/: Issue102.hs
grapesy-tcp/test-record-dot/Test/: OverloadedRecordDot.hs  OverloadedRecordUpdate.hs
grapesy-tcp/test-stress/Test/Stress/: Client.hs  Cmdline.hs
grapesy/data/: README.md  grpc-demo.key  grpc-demo.pem
grapesy/demo-client/Demo/Client/: Cmdline.hs
grapesy/demo-server/Demo/Server/Service/: Greeter.hs
grapesy/dev/: gencert.sh
grapesy/docs/: demo-client.md  demo-server.md  stress-tests.md
grapesy/interop/: Main.hs
grapesy/interop/Interop/: Client.hs  Cmdline.hs  SelfTest.hs  Server.hs
grapesy/interop/Interop/Client/: Connect.hs
grapesy/interop/Interop/Client/TestCase/: CancelAfterFirstResponse.hs  EmptyUnary.hs  LargeUnary.hs  PingPong.hs  ServerCompressedStreaming.hs  ServerCompressedUnary.hs  SpecialStatusMessage.hs  TimeoutOnSleepingServer.hs
grapesy/interop/Interop/Server/: Common.hs
grapesy/interop/Interop/Util/: Exceptions.hs  Messages.hs  NonInterleaved.hs
grapesy/kvstore/KVStore/: API.hs  Server.hs
grapesy/kvstore/KVStore/API/: Protobuf.hs
grapesy/proto/Proto/: Empty.hs  Helloworld.hs  Helloworld_Fields.hs  Kvstore.hs  Messages.hs  Messages_Fields.hs  Ping_Fields.hs  RouteGuide.hs  RouteGuide_Fields.hs  Spec_Fields.hs  Test.hs  Test_Fields.hs
grapesy/proto/Proto/API/: Helloworld.hs  Interop.hs  RouteGuide.hs
grapesy/src/Network/GRPC/: Client.hs  Common.hs  Server.hs
grapesy/src/Network/GRPC/Client/: Binary.hs  Call.hs  Connection.hs  Meta.hs  Run.hs  Session.hs  StreamType.hs
grapesy/src/Network/GRPC/Common/: Binary.hs  Compression.hs  Exception.hs  HTTP2Settings.hs  Headers.hs  NextElem.hs  Protobuf.hs  StreamElem.hs
grapesy/src/Network/GRPC/Server/: Binary.hs  Call.hs  Context.hs  Handler.hs  Protobuf.hs  RequestHandler.hs  (+3 more)
grapesy/test-disconnect/: Main.hs
grapesy/test-grapesy/: Main.hs
grapesy/test-grapesy/Test/Common/: Exception.hs
grapesy/test-grapesy/Test/Driver/: ClientServer.hs
grapesy/test-grapesy/Test/Prop/: Dialogue.hs  IncrementalParsing.hs  Serialization.hs
grapesy/test-grapesy/Test/Regression/: Issue102.hs  Issue238.hs
grapesy/test-grapesy/Test/Sanity/: Any.hs  BrokenDeployments.hs  Compression.hs  Disconnect.hs  EndOfStream.hs  Exception.hs  Interop.hs  NoIsLabel.hs  Reclamation.hs
grapesy/test-grapesy/Test/Util/: Exception.hs  RawTestServer.hs
grapesy/test-record-dot/: Main.hs
grapesy/test-record-dot/Test/: OverloadedRecordUpdate.hs
grapesy/test-stress/: Main.hs
grapesy/test-stress/Test/Stress/: Client.hs  Cmdline.hs  Driver.hs  Server.hs
grpc-spec/: CHANGELOG.md  grpc-spec.cabal
grpc-spec/proto/Proto/: OrcaLoadReport.hs  OrcaLoadReport_Fields.hs  Status.hs  Status_Fields.hs
grpc-spec/src/Network/GRPC/: Spec.hs
grpc-spec/test-grpc-spec/: Main.hs
grpc-spec/test-grpc-spec/Test/Prop/: IncrementalParsing.hs  Serialization.hs
tutorials/basics/: README.md  basics-tutorial.cabal  basics.cabal  genproto.sh
tutorials/basics/app/: Client.hs  Server.hs
tutorials/basics/src/: RouteGuide.hs
tutorials/conduit/: README.md  conduit-tutorial.cabal
tutorials/conduit/app/: Client.hs
tutorials/lowlevel/: README.md  lowlevel-tutorial.cabal  lowlevel.cabal
tutorials/lowlevel/app/: Client.hs  Server.hs
tutorials/lowlevel/proto/: LICENSE.proto  route_guide.proto
tutorials/lowlevel/src/: RouteGuide.hs
tutorials/metadata/: README.md  genproto.sh  metadata-tutorial.cabal  metadata.cabal
tutorials/metadata/app/: Client.hs  ProgressT.hs  Server.hs
tutorials/metadata/proto/: fileserver.proto
tutorials/monadstack/: README.md  monadstack-tutorial.cabal  monadstack.cabal
tutorials/monadstack/app/: Client.hs  Server.hs
tutorials/monadstack/data/: README.md
tutorials/monadstack/src/: RouteGuide.hs
tutorials/quickstart/: genproto.sh  quickstart-tutorial.cabal  quickstart.cabal
tutorials/quickstart/app/: Server.hs
tutorials/trailers-only/: README.md  trailers-only-tutorial.cabal
tutorials/trailers-only/app/: Server.hs
(+524 files in other folders)
