cabal-version:      3.0
name:               grapesy
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-dir:           data
data-files:         route_guide_db.json
                    grpc-demo.cert
                    grpc-demo.priv
tested-with:        GHC==8.10.7
                  , GHC==9.2.8
                  , GHC==9.4.5
                  , GHC==9.6.2

common lang
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
  build-depends:
      base >= 4.14 && < 4.19
  default-language:
      Haskell2010
  default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      DisambiguateRecordFields
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      PatternSynonyms
      QuantifiedConstraints
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
  if impl(ghc >= 9.0)
    ghc-options:
      -- This was introduced in 8.10, but it does not work reliably until 9.0.
      -- In 8.10 you might get spurious warnings when using re-exported modules
      -- (e.g. in proto-lens-runtime).
      -Wunused-packages

library
  import:
      lang
  ghc-options:
      -- Not enabled globally, because the code generated by proto-lens-protoc
      -- does not use ImportQualifiedPost.
      -Wprepositive-qualified-module
  exposed-modules:
      Network.GRPC.Util.Concurrency
      Network.GRPC.Util.Parser
      Network.GRPC.Util.PrettyVal
      Network.GRPC.Util.Thread
      Paths_grapesy
  hs-source-dirs:
      src
  build-depends:
    , async       >= 2.2  && < 2.3
    , bytestring  >= 0.10 && < 0.12
    , pretty-show >= 1.10 && < 1.11
    , stm         >= 2.5  && < 2.6

test-suite test-grapesy
  import:
      lang
  ghc-options:
      -Wprepositive-qualified-module
      -threaded
      -rtsopts
      -debug
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test-grapesy
  main-is:
      Main.hs
  build-depends:
      -- Internal dependencies
    , grapesy
  build-depends:
      -- External dependencies
    , binary
    , bytestring
    , exceptions
    , http-types
    , http2
    , network
    , network-run

Flag build-demo
  description: Build the demo
  default: False
  manual: True

Flag build-stress-test
  description: Build the stress test
  default: False
  manual: True

Flag crypton
  description: Use the crypton-x509-* package family instead of x509-*
  default: True
  manual: False
