cabal-version:      3.0
name:               grapesy
version:            0.1.0
synopsis:           Native Haskell implementation of the gRPC framework
description:        This is a fully compliant and feature complete native Haskell
                    implementation of gRPC, Google's RPC framework. See README.md
                    for details.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-dir:           data
data-files:         route_guide_db.json
                    grpc-demo.pem
                    grpc-demo.key
                    interop.pem
                    interop.key
                    interop-ca.pem
tested-with:        GHC==8.10.7
                  , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.4
                  , GHC==9.8.2
                  , GHC==9.10.1

source-repository head
  type:     git
  location: https://github.com/well-typed/grapesy

common lang
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
      -Wprepositive-qualified-module
      -Widentities
  build-depends:
      base >= 4.14 && < 4.21
  default-language:
      Haskell2010
  default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      DisambiguateRecordFields
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      PatternSynonyms
      PolyKinds
      QuantifiedConstraints
      RankNTypes
      RoleAnnotations
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances

  if impl(ghc >= 9.0)
    ghc-options:
      -- This was introduced in 8.10, but it does not work reliably until 9.0.
      -- In 8.10 you might get spurious warnings when using re-exported modules
      -- (e.g. in proto-lens-runtime).
      -Wunused-packages

  if flag(snappy)
    cpp-options: -DSNAPPY

common common-executable-flags
  ghc-options:
      -threaded
      -rtsopts

library
  import:
      lang
  exposed-modules:
      Network.GRPC.Client
      Network.GRPC.Client.Binary
      Network.GRPC.Client.StreamType.CanCallRPC
      Network.GRPC.Client.StreamType.Conduit
      Network.GRPC.Client.StreamType.IO
      Network.GRPC.Client.StreamType.IO.Binary
      Network.GRPC.Common
      Network.GRPC.Common.Binary
      Network.GRPC.Common.Compression
      Network.GRPC.Common.JSON
      Network.GRPC.Common.NextElem
      Network.GRPC.Common.Protobuf
      Network.GRPC.Common.StreamElem
      Network.GRPC.Common.StreamType
      Network.GRPC.Common.HTTP2Settings
      Network.GRPC.Internal.XIO
      Network.GRPC.Server
      Network.GRPC.Server.Binary
      Network.GRPC.Server.Protobuf
      Network.GRPC.Server.Run
      Network.GRPC.Server.StreamType
      Network.GRPC.Server.StreamType.Binary
      Network.GRPC.Spec
  other-modules:
      Network.GRPC.Client.Call
      Network.GRPC.Client.Connection
      Network.GRPC.Client.Meta
      Network.GRPC.Client.Session
      Network.GRPC.Client.StreamType
      Network.GRPC.Server.Call
      Network.GRPC.Server.Context
      Network.GRPC.Server.Handler
      Network.GRPC.Server.HandlerMap
      Network.GRPC.Server.RequestHandler
      Network.GRPC.Server.RequestHandler.API
      Network.GRPC.Server.Session
      Network.GRPC.Spec.Base64
      Network.GRPC.Spec.Call
      Network.GRPC.Spec.Compression
      Network.GRPC.Spec.CustomMetadata.Map
      Network.GRPC.Spec.CustomMetadata.NoMetadata
      Network.GRPC.Spec.CustomMetadata.Raw
      Network.GRPC.Spec.CustomMetadata.Typed
      Network.GRPC.Spec.Headers.Common
      Network.GRPC.Spec.Headers.Invalid
      Network.GRPC.Spec.Headers.PseudoHeaders
      Network.GRPC.Spec.Headers.Request
      Network.GRPC.Spec.Headers.Response
      Network.GRPC.Spec.LengthPrefixed
      Network.GRPC.Spec.OrcaLoadReport
      Network.GRPC.Spec.PercentEncoding
      Network.GRPC.Spec.RPC
      Network.GRPC.Spec.RPC.JSON
      Network.GRPC.Spec.RPC.Protobuf
      Network.GRPC.Spec.RPC.Raw
      Network.GRPC.Spec.RPC.StreamType
      Network.GRPC.Spec.RPC.Unknown
      Network.GRPC.Spec.Status
      Network.GRPC.Spec.Timeout
      Network.GRPC.Spec.TraceContext
      Network.GRPC.Util.AccumulatedByteString
      Network.GRPC.Util.ByteString
      Network.GRPC.Util.GHC
      Network.GRPC.Util.HKD
      Network.GRPC.Util.HTTP2
      Network.GRPC.Util.HTTP2.Stream
      Network.GRPC.Util.Parser
      Network.GRPC.Util.Protobuf
      Network.GRPC.Util.RedundantConstraint
      Network.GRPC.Util.Session
      Network.GRPC.Util.Session.API
      Network.GRPC.Util.Session.Channel
      Network.GRPC.Util.Session.Client
      Network.GRPC.Util.Session.Server
      Network.GRPC.Util.Thread
      Network.GRPC.Util.TLS

      Paths_grapesy

      Proto.OrcaLoadReport
      Proto.OrcaLoadReport_Fields

      Control.Monad.XIO
  autogen-modules:
      Paths_grapesy
  hs-source-dirs:
      src
      util
      xio
      proto
  build-depends:
    , aeson                >= 1.5     && < 2.3
    , async                >= 2.2     && < 2.3
    , base16-bytestring    >= 1.0     && < 1.1
    , base64-bytestring    >= 1.2     && < 1.3
    , binary               >= 0.8     && < 0.9
    , bytestring           >= 0.10.12 && < 0.13
    , case-insensitive     >= 1.2     && < 1.3
    , conduit              >= 1.3     && < 1.4
    , containers           >= 0.6     && < 0.8
    , crypton-x509         >= 1.7     && < 1.8
    , crypton-x509-store   >= 1.6     && < 1.7
    , crypton-x509-system  >= 1.6     && < 1.7
    , data-default         >= 0.7     && < 0.8
    , deepseq              >= 1.4     && < 1.6
    , exceptions           >= 0.10    && < 0.11
    , hashable             >= 1.3     && < 1.5
    , http-types           >= 0.12    && < 0.13
    , http2                >= 5.3     && < 5.4
    , http2-tls            >= 0.4.1   && < 0.5
    , lens                 >= 5.0     && < 5.4
    , mtl                  >= 2.2     && < 2.4
    , network              >= 3.1     && < 3.3
    , network-run          >= 0.4     && < 0.5
    , proto-lens           >= 0.7     && < 0.8
    , proto-lens-runtime   >= 0.7     && < 0.8
    , random               >= 1.2     && < 1.3
    , record-hasfield      >= 1.0     && < 1.1
    , recv                 >= 0.1     && < 0.2
    , stm                  >= 2.5     && < 2.6
    , text                 >= 1.2     && < 2.2
    , time-manager         >= 0.1     && < 0.2
    , tls                  >= 1.7     && < 2.2
    , unbounded-delays     >= 0.1.1   && < 0.2
    , unordered-containers >= 0.2     && < 0.3
    , utf8-string          >= 1.0     && < 1.1
    , vector               >= 0.13    && < 0.14
    , zlib                 >= 0.6     && < 0.8

  -- Snappy can be a bit tricky to install on some systems, so we make it an
  -- optional dependency. Snappy support can be explicitly disabled by clearing
  -- the @snappy@ flag manually
  --
  -- > package grapesy
  -- >    flags: -snappy
  --
  -- or by setting an unsatisfiable constraint on @snappy-c@
  --
  -- > constraints: snappy-c<0
  --
  -- It can be explicitly /enabled/ by setting the @snappy@ flag manually.
  if flag(snappy)
    build-depends:
      , snappy-c >= 0.1 && < 0.2

test-suite test-record-dot
  import:
    , lang
    , common-executable-flags
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test-record-dot
      proto
  main-is:
      Main.hs
  other-modules:
      Test.OverloadedRecordDot
      Test.OverloadedRecordUpdate
      Proto.Spec
  build-depends:
      -- Internal dependencies
    , grapesy
  build-depends:
      -- External dependencies
    , bytestring         >= 0.10 && < 0.13
    , containers         >= 0.6  && < 0.8
    , proto-lens-runtime >= 0.7  && < 0.8
    , tasty              >= 1.4  && < 1.6
    , tasty-hunit        >= 0.10 && < 0.11
    , text               >= 1.2  && < 2.2
    , vector             >= 0.13 && < 0.14
    , record-hasfield    >= 1.0  && < 1.1

  if impl(ghc < 9.2)
    buildable: False

test-suite test-grapesy
  import:
    , lang
    , common-executable-flags
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test-grapesy
      proto

      -- Testing internals
      --
      -- This is the reason the Util.* modules live in a separate directory; if
      -- we included @src@ here, then any import from @Network.GRPC.*@ would
      -- be a direct import rather than an import from the library.
      util
  main-is:
      Main.hs
  other-modules:
      Test.Driver.ClientServer
      Test.Driver.Dialogue
      Test.Driver.Dialogue.Definition
      Test.Driver.Dialogue.Execution
      Test.Driver.Dialogue.Generation
      Test.Driver.Dialogue.TestClock
      Test.Prop.Dialogue
      Test.Prop.IncrementalParsing
      Test.Prop.Serialization
      Test.Sanity.EndOfStream
      Test.Sanity.Interop
      Test.Sanity.StreamingType.CustomFormat
      Test.Sanity.StreamingType.NonStreaming
      Test.Util
      Test.Util.Awkward
      Test.Util.Orphans
      Test.Util.Protobuf

      -- Internals we're testing
      Network.GRPC.Util.Parser

      Paths_grapesy

      Proto.Empty
      Proto.Messages
      Proto.Test
  autogen-modules:
      Paths_grapesy
  build-depends:
      -- Internal dependencies
    , grapesy
  build-depends:
      -- External dependencies
    , async                       >= 2.2   && < 2.3
    , base64-bytestring           >= 1.2   && < 1.3
    , binary                      >= 0.8   && < 0.9
    , bytestring                  >= 0.10  && < 0.13
    , case-insensitive            >= 1.2   && < 1.3
    , containers                  >= 0.6   && < 0.8
    , exceptions                  >= 0.10  && < 0.11
    , http-types                  >= 0.12  && < 0.13
    , http2                       >= 5.3   && < 5.4
    , lens                        >= 5.0   && < 5.4
    , mtl                         >= 2.2   && < 2.4
    , network                     >= 3.1   && < 3.3
    , prettyprinter               >= 1.7   && < 1.8
    , prettyprinter-ansi-terminal >= 1.1   && < 1.2
    , proto-lens                  >= 0.7   && < 0.8
    , proto-lens-runtime          >= 0.7   && < 0.8
    , QuickCheck                  >= 2.14  && < 2.16
    , quickcheck-instances        >= 0.3   && < 0.4
    , serialise                   >= 0.2   && < 0.3
    , stm                         >= 2.5   && < 2.6
    , tasty                       >= 1.4   && < 1.6
    , tasty-hunit                 >= 0.10  && < 0.11
    , tasty-quickcheck            >= 0.10  && < 0.12
    , text                        >= 1.2   && < 2.2
    , tls                         >= 1.7   && < 2.2
    , tree-diff                   >= 0.3   && < 0.4

executable demo-client
  import:
    , lang
    , common-executable-flags
  hs-source-dirs:
      demo-client
      proto
  main-is:
      Main.hs
  other-modules:
      Demo.Client.API.Core.Greeter
      Demo.Client.API.Core.NoFinal.Greeter
      Demo.Client.API.Core.RouteGuide
      Demo.Client.API.StreamType.Conduit.RouteGuide
      Demo.Client.API.StreamType.IO.Greeter
      Demo.Client.API.StreamType.IO.Ping
      Demo.Client.API.StreamType.IO.RouteGuide
      Demo.Client.API.StreamType.MonadStack.Greeter
      Demo.Client.Cmdline
      Demo.Client.Util.DelayOr
      Demo.Client.Util.Logging

      Paths_grapesy

      Proto.API.Helloworld
      Proto.API.Ping
      Proto.API.RouteGuide
      Proto.Helloworld
      Proto.Helloworld_Fields
      Proto.Ping
      Proto.Ping_Fields
      Proto.RouteGuide
      Proto.RouteGuide_Fields
  autogen-modules:
      Paths_grapesy
  build-depends:
      -- Internal dependencies
    , grapesy
  build-depends:
      -- External dependencies
    , async                >= 2.2  && < 2.3
    , bytestring           >= 0.10 && < 0.13
    , conduit              >= 1.3  && < 1.4
    , contra-tracer        >= 0.2  && < 0.3
    , exceptions           >= 0.10 && < 0.11
    , network              >= 3.1  && < 3.3
    , optparse-applicative >= 0.16 && < 0.19
    , proto-lens-runtime   >= 0.7  && < 0.8
    , text                 >= 1.2  && < 2.2
    , transformers         >= 0.5  && < 0.7

  if !flag(build-demo)
    buildable:
      False

executable demo-server
  import:
    , lang
    , common-executable-flags
  hs-source-dirs:
      demo-server
      proto
  main-is:
      Main.hs
  other-modules:
      Demo.Server.Aux.RouteGuide
      Demo.Server.Cmdline
      Demo.Server.Service.Greeter
      Demo.Server.Service.Ping
      Demo.Server.Service.RouteGuide

      Proto.API.Helloworld
      Proto.API.Ping
      Proto.API.RouteGuide
      Proto.Helloworld
      Proto.Helloworld_Fields
      Proto.Ping
      Proto.Ping_Fields
      Proto.RouteGuide
      Proto.RouteGuide_Fields

      Paths_grapesy
  autogen-modules:
      Paths_grapesy
  build-depends:
      -- Internal dependencies
    , grapesy
  build-depends:
      -- External dependencies
    , aeson                >= 1.5  && < 2.3
    , bytestring           >= 0.10 && < 0.13
    , containers           >= 0.6  && < 0.8
    , exceptions           >= 0.10 && < 0.11
    , network              >= 3.1  && < 3.3
    , optparse-applicative >= 0.16 && < 0.19
    , proto-lens-runtime   >= 0.7  && < 0.8
    , text                 >= 1.2  && < 2.2
    , time                 >= 1.9  && < 1.13
    , transformers         >= 0.5  && < 0.7

  if !flag(build-demo)
    buildable:
      False

executable test-stress
  import:
    , lang
    , common-executable-flags
  hs-source-dirs:
      test-stress
  main-is:
      Main.hs
  other-modules:
      Test.Stress.Client
      Test.Stress.Cmdline
      Test.Stress.Server
      Test.Stress.Server.API
  build-depends:
      -- Internal dependencies
    , grapesy
  build-depends:
      -- External dependencies
    , optparse-applicative >= 0.16 && < 0.19

  if !flag(build-stress-test)
    buildable:
      False

test-suite grapesy-interop
  import:
    , lang
    , common-executable-flags
  default-extensions:
      OverloadedLabels
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      interop
      proto
  main-is:
      Main.hs
  other-modules:
      Interop.Client
      Interop.Client.Common
      Interop.Client.Connect
      Interop.Client.Ping
      Interop.Client.TestCase.CancelAfterBegin
      Interop.Client.TestCase.CancelAfterFirstResponse
      Interop.Client.TestCase.ClientCompressedStreaming
      Interop.Client.TestCase.ClientCompressedUnary
      Interop.Client.TestCase.ClientStreaming
      Interop.Client.TestCase.CustomMetadata
      Interop.Client.TestCase.EmptyStream
      Interop.Client.TestCase.EmptyUnary
      Interop.Client.TestCase.LargeUnary
      Interop.Client.TestCase.PingPong
      Interop.Client.TestCase.ServerCompressedStreaming
      Interop.Client.TestCase.ServerCompressedUnary
      Interop.Client.TestCase.ServerStreaming
      Interop.Client.TestCase.SpecialStatusMessage
      Interop.Client.TestCase.StatusCodeAndMessage
      Interop.Client.TestCase.TimeoutOnSleepingServer
      Interop.Client.TestCase.UnimplementedMethod
      Interop.Client.TestCase.UnimplementedService
      Interop.Cmdline
      Interop.SelfTest
      Interop.Server
      Interop.Server.Common
      Interop.Server.PingService.Ping
      Interop.Server.TestService.EmptyCall
      Interop.Server.TestService.FullDuplexCall
      Interop.Server.TestService.StreamingInputCall
      Interop.Server.TestService.StreamingOutputCall
      Interop.Server.TestService.UnaryCall
      Interop.Util.ANSI
      Interop.Util.Exceptions
      Interop.Util.Messages

      Paths_grapesy

      Proto.API.Interop
      Proto.API.Ping
      Proto.Empty
      Proto.Messages
      Proto.Ping
      Proto.Test
  autogen-modules:
      Paths_grapesy
  build-depends:
    , grapesy
  build-depends:
    , ansi-terminal        >= 1.1  && < 1.2
    , bytestring           >= 0.10 && < 0.13
    , exceptions           >= 0.10 && < 0.11
    , mtl                  >= 2.2  && < 2.4
    , network              >= 3.1  && < 3.3
    , optparse-applicative >= 0.16 && < 0.19
    , proto-lens-runtime   >= 0.7  && < 0.8
    , text                 >= 1.2  && < 2.2

benchmark grapesy-kvstore
  import:
    , lang
    , common-executable-flags
  default-extensions:
      OverloadedLabels
  type:
      exitcode-stdio-1.0
  main-is:
      Main.hs
  hs-source-dirs:
      kvstore
      proto
  other-modules:
      KVStore.API
      KVStore.API.JSON
      KVStore.API.Protobuf
      KVStore.Client
      KVStore.Cmdline
      KVStore.Server
      KVStore.Util.Profiling
      KVStore.Util.RandomAccessSet
      KVStore.Util.RandomGen
      KVStore.Util.Store

      Proto.Kvstore

      Paths_grapesy
  autogen-modules:
      Paths_grapesy
  build-depends:
      grapesy
  build-depends:
    , aeson                >= 1.5  && < 2.3
    , base16-bytestring    >= 1.0  && < 1.1
    , base64-bytestring    >= 1.2  && < 1.3
    , bytestring           >= 0.10 && < 0.13
    , containers           >= 0.6  && < 0.8
    , hashable             >= 1.3  && < 1.5
    , optparse-applicative >= 0.16 && < 0.19
    , proto-lens-runtime   >= 0.7  && < 0.8
    , splitmix             >= 0.1  && < 0.2
    , text                 >= 1.2  && < 2.2
    , unordered-containers >= 0.2  && < 0.3

  if flag(strace)
    cpp-options: -DSTRACE
    build-depends: unix >= 2.7 && < 2.9

Flag build-demo
  description: Build the demo
  default: False
  manual: True

Flag build-stress-test
  description: Build the stress test
  default: False
  manual: True

Flag snappy
  description: Enable snappy compression capabilities
  default: True
  manual: False

Flag strace
  description: Write events to /dev/null so that they show up in strace
  default: False
  manual: True
